--- a/views/index.haml
+++ b/views/index.haml
@@ -8,7 +8,8 @@
 
 		%title Thiago Gonzalez - Desenvolvedor Frontend  
 
-		%link{"rel" => "stylesheet", "href" => "/stylesheets/style.css", "type" => "text/css"}  
+		%link{:rel => "stylesheet", :href => "/stylesheets/style.css", :type => "text/css"}  
+		%script{:src => '/bower_components/jquery/index.js'}
 
 
 		/[if lt IE 9]
