--- a/views/index.haml
+++ b/views/index.haml
@@ -8,9 +8,12 @@
 
 		%title Thiago Gonzalez - Desenvolvedor Frontend  
 
+		/ CSS
 		%link{:rel => "stylesheet", :href => "/stylesheets/style.css", :type => "text/css"}  
-		%script{:src => '/bower_components/jquery/index.js'}
-
+		
+		/ Javascript
+		%script{:src => '/bower_components/jquery/jquery.min.js'}
+		%script{:src => '/bower_components/jquery-cycle/jquery.cycle.all.js'}
 
 		/[if lt IE 9]
 			%script{:src => "http://html5shim.googlecode.com/svn/trunk/html5.js"}
