--- a/views/index.haml
+++ b/views/index.haml
@@ -12,8 +12,7 @@
 		%link{:rel => "stylesheet", :href => "/stylesheets/style.css", :type => "text/css"}  
 		
 		/ Javascript
-		%script{:src => '/bower_components/jquery/jquery.min.js'}
-		%script{:src => '/bower_components/jquery-cycle/jquery.cycle.all.js'}
+		%script{:src => '#'}
 
 		/[if lt IE 9]
 			%script{:src => "http://html5shim.googlecode.com/svn/trunk/html5.js"}
