--- a/views/index.haml
+++ b/views/index.haml
@@ -82,7 +82,7 @@
 
 				#projects
 
-					= for i in (1..10) do
+					- for i in (1..10) do
 						%article 
 							%a{:href => "#"}
 								%img{:src => "http://placehold.it/150x150/000", :alt => "Project", :class => "photo"}
